Fix firefox alignment issues

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ table thead tr {
     background: #eee;
     text-align: center;
     font-weight: bold;
-    line-height: 1.5;
+    height: 25px;
 }
 
 table .block {
@@ -88,10 +88,17 @@ table .block {
     position: relative;
 }
 
-table .block>div:not(:last-child) {
+table .block .wrapper {
+    position: absolute;
+    height: 100%;
+    right: 0px;
+    left: 2px;
+}
+
+table .block .wrapper>div:not(:last-child) {
     height: 25%;
     border-bottom: 1px dashed #ddd;
-    width: 99%;
+    width: 100%;
 }
 
 table .item {
